# ongybar

./: Cargo.toml  README.md
doc/: format
src/: config.rs  main.rs  xorg.rs
src/modules/: colored.rs  mod.rs  ongydraw.rs  ongyimage.rs  ongypos.rs  ongyrect.rs  ongystr.rs  renderable.rs  separator.rs
src/parsers/: custom.rs  dzen.rs  mod.rs
