[package]
name = "ongybar"
version = "0.1.0"
authors = ["Markus Ongyerth <ongy@ongy.net>"]

[dependencies]
byteorder = "1.0.0"
hostname = "0.1.3"
libc = "0.2.24"
piston2d-graphics = "0.21.1"
piston2d-opengl_graphics = "0.44.0"
gl = "0.6.2"

[dependencies.xcb]
version =  "0.7.6"
features = ["xlib_xcb", "dri2"]

[dependencies.x11]
version = "2.14"
features = ["xlib", "glx"]
